<resources>
    <string name="app_name">FoodApp</string>

    <string name="pasta">Pasta</string>
    <string name="meat">Meat</string>
    <string name="pizza">Pizza</string>
    <string name="salad">Salad</string>
    <string name="holder">Holder</string>
    <string name="chicago">Chicago Pizza</string>
    <string name="greek">Greek Pizza</string>
    <string name="sicilian">Sicilian Pizza</string>
    <string name="price">$9.99</string>
    <string name="add">Add</string>
    <string name="menu">Menu</string>
    <string name="hamburger">Hamburger</string>
    <string name="notification">Notification</string>
    <string name="back">Background</string>
</resources>